<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>za.net.hanro50.gmll</groupId>
  <artifactId>agent</artifactId>
  <version>1.5.2</version>
  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>
  <dependencies>
	<dependency>
		<groupId>com.google.code.gson</groupId>
		<artifactId>gson</artifactId>
		<version>2.10.1</version>
	  </dependency>
  </dependencies>
  <build>
	<finalName>agent</finalName>
    <plugins>
		<plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
                <source>1.9</source>
                <target>1.9</target>
                <compilerArgs>
					<arg>--add-exports</arg><arg>java.base/sun.net.www.file=ALL-UNNAMED</arg>
					<arg>--add-exports</arg><arg>java.base/sun.net.www.protocol.ftp=ALL-UNNAMED</arg>
                    <arg>--add-exports</arg><arg>java.base/sun.net.www.protocol.http=ALL-UNNAMED</arg>
					<arg>--add-exports</arg><arg>java.base/sun.net.www.protocol.https=ALL-UNNAMED</arg>
					<arg>--add-exports</arg><arg>java.base/sun.net.www.protocol.jar=ALL-UNNAMED</arg>
					<arg>--add-exports</arg><arg>java.base/sun.net.www.protocol.jmod=ALL-UNNAMED</arg>
					<arg>--add-exports</arg><arg>java.base/sun.net.www.protocol.jrt=ALL-UNNAMED</arg>
					<arg>--add-exports</arg><arg>java.base/sun.net.www.protocol.mailto=ALL-UNNAMED</arg>
                </compilerArgs>
            </configuration>
        </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
          </archive>
        </configuration>
      </plugin>
			<!-- download source code in Eclipse, best practice -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>false</downloadJavadocs>
				</configuration>
			</plugin>

			<!-- Set a compiler level -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

		<!-- Maven Shade Plugin -->
		<plugin>
		  <groupId>org.apache.maven.plugins</groupId>
		  <artifactId>maven-shade-plugin</artifactId>
		  <version>2.3</version>
		  <executions>
		     <!-- Run shade goal on package phase -->
		    <execution>
			<phase>package</phase>
			<goals>
				<goal>shade</goal>
			</goals>
			<configuration>
			  <transformers>
				<!-- add Main-Class to manifest file -->
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
					<mainClass>za.net.hanro50.gmll.App</mainClass>
				</transformer>
			  </transformers>
			</configuration>
		      </execution>
		  </executions>
		</plugin>

		</plugins>
	</build>
</project>